--- a/client/sixbroker.conf
+++ b/client/sixbroker.conf
@@ -1,15 +1,13 @@
-# SERVERIP=10.10.10.1
-# LOCALv4=172.16.10.2/24
-# WANv6=2000:172:16:10::/64
-
 [Interface]
 PrivateKey = NGEyNTFhMmVmOWJiZjRjY2MzNWY5N2FiYTJjOWNiZGEgIC0K
 Address = 172.16.10.2/24
 ListenPort = 51820
-PostUp = ip route replace default dev sixbroker
-PostUp = ip route add 10.10.10.1 via 192.168.1.1
-PostDown = ip route replace default via 192.168.1.1
-PostDown = ip route del 10.10.10.1 via 192.168.1.1
+PostUp = ip -4 route replace default dev sixbroker
+PostUp = ip -4 route add 10.10.10.1 via 192.168.1.1
+PostUp = ip -6 addr dev sixbroker add 2000:172:16:10::2/64
+PostDown = ip -4 route replace default via 192.168.1.1
+PostDown = ip -4 route del 10.10.10.1 via 192.168.1.1
+PostDown = ip -6 addr dev sixbroker del 2000:172:16:10::2/64
 
 [Peer]
 PublicKey = MWIxYjhhN2EyMmM5Y2JhMzE0NDIyMDIwNzRiYzE0ZTEgIC0K
