More automation fixes for the client registration system, change default LANv6 subnet size to /56

--- a/server/clients.conf
+++ b/server/clients.conf
@@ -1,11 +1,17 @@
 # Client network configuration
 
-# 2000:172:16::0000 /48         IPv6 Tunnel Brokerage tunnel space, carved into /64's per client, every client gets one
-# 2000:10:10::0000  /40         IPv6 Tunnel Brokerage Client Space, carved into /48's per client, not every client gets one.
+# 100.127.0.0                /16         IPv4 Tunnel Brokerage tunnel space
+# 2000:0172:0016:0000::      /48         IPv6 Tunnel Brokerage tunnel space, carved into /64's per client, every client gets one
+# 2000:0010:1000:0000::      /40         IPv6 Tunnel Brokerage Client Space, carved into /56's per client, not every client gets one, though reserved!
 
 # the syntax below is  client-id  followed by either  wan or lan.   both are
 # allowed.   LAN is ignored without a WAN
 # the client-id  should match the public host defined in the clients/  directory
 
-client1.wan = 2000:172:16:1::/64
-client1.lan = 2000:10:10:1::/48
+#4wan1 is the default gw
+#6wan1 is reserved (parallel assignment to the 4wan)  for /64's  
+#6lan1 is reserved (parallel assignment to the 4wan)  for /56's
+
+client1.4wan = 100.127.0.2/16
+client1.6wan = 2000:0172:0016:0002::/64
+client1.6lan = 2000:0010:1000:0200::/56
